# rtracy

./: Cargo.toml  README.md
src/: camera.rs  main.rs  raytracer.rs  renderer.rs
src/raytracer/: ray.rs
src/renderer/: random_scene.rs  scene.rs  shape.rs  simple_scene.rs  sphere.rs
