[package]
name = "rtracy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
futures = "*"
async-std = "*"
rusty_pool = "*"

http = "0.2.0"
reqwest = "0.9.24"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
ansi_term = "0.12.1"
dyn-clone = "1.0.9"
rand = "0.8.5"
